# mrchess

./: .gitignore  README.md  index.html
cgi-bin/: .gitignore  mrchess.cgi
css/: mrchess.css
js/: mrchess.js
src/: .gitignore  Board.cpp  Board.h  CMakeLists.txt  MinimaxNode.cpp  MinimaxNode.h  MoveEngine.cpp  MoveEngine.h  Piece.cpp  Piece.h  mrchess.cpp  mrchess.sln  mrchess.vcxproj  mrchess.vcxproj.filters
src/nlohmann/: json.hpp
tests/: tests.cpp  tests.vcxproj  tests.vcxproj.filters
